--- a/src/components/Content/Messages/Message/Message.module.css
+++ b/src/components/Content/Messages/Message/Message.module.css
@@ -8,8 +8,11 @@
   margin: 5px 0;
   padding: 10px 5px;
 }
+.message:nth-child(2n+1){
+  flex-direction: row-reverse;
+}
 .message_container {
-  padding-left: 10px;
+  padding: 0 10px;
   font-size: 14px;
   line-height: 16px;
 }
