--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@ body {
   background-color: #ffffff;
   font-family: 'Montserrat', sans-serif;
 }
+* {
+  box-sizing: border-box;
+}
 .App {
   padding: 0 5%;
   padding-bottom: 20px;
