--- a/src/components/Content/Messages/NewMessage/NewMessage.module.css
+++ b/src/components/Content/Messages/NewMessage/NewMessage.module.css
@@ -1,5 +1,7 @@
   .create_msg {
+    justify-self: flex-end;
     width: 95%;
+    margin-top: 10px;
     padding: 10px 5px;
     border: 1px solid #C7CBD1;
   }
