--- a/src/components/Content/Profile/Posts/Post/Post.module.css
+++ b/src/components/Content/Profile/Posts/Post/Post.module.css
@@ -1,10 +1,4 @@
-.post {
-  margin-top: 20px;
-  display: flex;
-  flex-flow: column nowrap;
-}
-
-.item {
+.post_item {
   margin-top: 20px;
   display: flex;
   flex-flow: row nowrap;
