--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,7 +9,7 @@
   pointer-events: none;
 }
 
-.header > a {
+.header > span {
   display: block;
   width: 50px;
   height: 50px;
@@ -17,7 +17,7 @@
   animation: App-logo-spin infinite 20s linear;
 }
 
-.header a:hover {
+.header span:hover {
   animation-play-state: paused;
 }
 
