--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,14 +1,16 @@
 .content {
   grid-area: content;
+  width: 100%;
 }
-.content > img {
+
+.main_bg{
   width: 100%;
   height: 174px;
   max-height: 30vh;
 }
 
 @media (max-width: 600px) {
-  .content > img {
+  .main_bg {
     display: none;
   }
 }
