--- a/src/components/Content/Profile/UserData/UserData.module.css
+++ b/src/components/Content/Profile/UserData/UserData.module.css
@@ -3,14 +3,14 @@
   flex-flow: row nowrap;
 }
 
-.user_data>img {
+.user_data > img {
   width: 200px;
-  height: 150px;
+  height: 200px;
 }
 
 .user_info {
+  font-size: 16px;
   padding-left: 20px;
-  height: 200px;
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
@@ -30,28 +30,45 @@
   margin-top: 40px;
 }
 
+.user_info_details a{
+  text-decoration: none;
+  display: block;
+  width: 200px;
+  padding: 10px 0;
+  margin-bottom: 3px;
+  text-align: center;
+  background-color: bisque;
+  color: #FF9800;
+  font-weight: 600;
+}
+
+.user_info_details a:hover {
+  background-color: beige;
+  transition: 300ms;
+}
+
 @media (max-width: 600px) {
-  .profile img {
-    width: 180px;
-    height: 130px;
+  .user_data > img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .user_name {
+    font-size: 18px;
   }
 
   .user_info {
+    font-size: 10px;
     padding-left: 10px;
   }
 
   .user_info_details {
-    font-size: 14px;
-    margin-top: 20px;
+    font-size: 12px;
+    margin-top: 5px;
   }
 }
 
 @media (max-width: 320px) {
-  .user_data img {
-    width: 150px;
-    height: 110px;
-  }
-
   .user_info {
     padding-left: 5px;
   }
