--- a/src/components/Aside/FriendList/Friend/Friend.module.css
+++ b/src/components/Aside/FriendList/Friend/Friend.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     margin-right: 10px;
 }
+
 .friend > img {
     width: 40px;
     height: 40px;
@@ -15,4 +16,7 @@
 .name {
     font-size: 16px;
     color: #000000;
+    max-width: 60px;
+    text-align: center;
+    overflow: hidden;
 }
